web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: "public"
spec:
  rules:
    - host: crucible.geddes.rcac.purdue.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: merckury
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: silicon
                port:
                  number: 80
